--- a/app/src/main/res/layout/activity_multiplayer.xml
+++ b/app/src/main/res/layout/activity_multiplayer.xml
@@ -4,7 +4,28 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ViewModel.multiplayer.MultiplayerActivity">
+    tools:context=".ViewModel.multiplayer.MultiplayerActivity"
+    android:background="@drawable/set_background">
+
+    <View
+        android:id="@+id/view"
+        android:layout_width="100dp"
+        android:layout_height="50dp"
+        android:layout_marginStart="3dp"
+        android:layout_marginTop="12dp"
+        android:background="@drawable/radius"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <View
+        android:id="@+id/view2"
+        android:layout_width="160dp"
+        android:layout_height="50dp"
+        android:layout_marginTop="12dp"
+        android:layout_marginEnd="7dp"
+        android:background="@drawable/radius"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/opponentPointTextView"
@@ -12,6 +33,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         android:layout_marginEnd="24dp"
+        android:textColor="@color/blue"
         android:text="@string/pointTextView"
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -23,6 +45,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="5dp"
         android:layout_marginTop="20dp"
+        android:textColor="@color/blue"
         android:text="@string/pointTextView"
         android:textSize="24sp"
         app:layout_constraintStart_toEndOf="@+id/MeTextView"
@@ -30,11 +53,11 @@
 
     <Button
         android:id="@+id/callSETBtn"
-        android:layout_width="150dp"
-        android:layout_height="50dp"
-        android:backgroundTint="@color/dark_blue"
+        android:layout_width="170dp"
+        android:layout_height="60dp"
+        android:backgroundTint="@color/blue"
         android:onClick="onSETBtnClick"
-        android:text="@string/callSETBtn"
+        android:text="@string/appName"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -65,7 +88,7 @@
                 android:id="@+id/card0"
                 android:layout_width="100dp"
                 android:layout_height="144dp"
-                android:background="@drawable/card_background_empty"
+                android:background="@color/trans"
                 android:contentDescription="@string/contentDescriptionForCards"
                 android:onClick="onCardClick"
                 app:srcCompat="@drawable/gd1"
@@ -75,7 +98,7 @@
                 android:id="@+id/card1"
                 android:layout_width="100dp"
                 android:layout_height="144dp"
-                android:background="@drawable/card_background_empty"
+                android:background="@color/trans"
                 android:contentDescription="@string/contentDescriptionForCards"
                 android:onClick="onCardClick"
                 app:srcCompat="@drawable/gd1"
@@ -85,7 +108,7 @@
                 android:id="@+id/card2"
                 android:layout_width="100dp"
                 android:layout_height="144dp"
-                android:background="@drawable/card_background_empty"
+                android:background="@color/trans"
                 android:contentDescription="@string/contentDescriptionForCards"
                 android:onClick="onCardClick"
                 app:srcCompat="@drawable/gd1"
@@ -104,7 +127,7 @@
                 android:id="@+id/card3"
                 android:layout_width="100dp"
                 android:layout_height="144dp"
-                android:background="@drawable/card_background_empty"
+                android:background="@color/trans"
                 android:contentDescription="@string/contentDescriptionForCards"
                 android:onClick="onCardClick"
                 app:srcCompat="@drawable/gd1"
@@ -114,7 +137,7 @@
                 android:id="@+id/card4"
                 android:layout_width="100dp"
                 android:layout_height="144dp"
-                android:background="@drawable/card_background_empty"
+                android:background="@color/trans"
                 android:contentDescription="@string/contentDescriptionForCards"
                 android:onClick="onCardClick"
                 app:srcCompat="@drawable/gd1"
@@ -124,7 +147,7 @@
                 android:id="@+id/card5"
                 android:layout_width="100dp"
                 android:layout_height="144dp"
-                android:background="@drawable/card_background_empty"
+                android:background="@color/trans"
                 android:contentDescription="@string/contentDescriptionForCards"
                 android:onClick="onCardClick"
                 app:srcCompat="@drawable/gd1"
@@ -143,7 +166,7 @@
                 android:id="@+id/card6"
                 android:layout_width="100dp"
                 android:layout_height="144dp"
-                android:background="@drawable/card_background_empty"
+                android:background="@color/trans"
                 android:contentDescription="@string/contentDescriptionForCards"
                 android:onClick="onCardClick"
                 app:srcCompat="@drawable/gd1"
@@ -153,7 +176,7 @@
                 android:id="@+id/card7"
                 android:layout_width="100dp"
                 android:layout_height="144dp"
-                android:background="@drawable/card_background_empty"
+                android:background="@color/trans"
                 android:contentDescription="@string/contentDescriptionForCards"
                 android:onClick="onCardClick"
                 app:srcCompat="@drawable/gd1"
@@ -163,7 +186,7 @@
                 android:id="@+id/card8"
                 android:layout_width="100dp"
                 android:layout_height="144dp"
-                android:background="@drawable/card_background_empty"
+                android:background="@color/trans"
                 android:contentDescription="@string/contentDescriptionForCards"
                 android:onClick="onCardClick"
                 app:srcCompat="@drawable/gd1"
@@ -179,6 +202,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
         android:layout_marginTop="20dp"
+        android:textColor="@color/blue"
         android:text="@string/meText"
         android:textSize="24sp"
         app:layout_constraintStart_toStartOf="parent"
@@ -190,6 +214,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         android:layout_marginEnd="5dp"
+        android:textColor="@color/blue"
         android:text="@string/opponentText"
         android:textSize="24sp"
         app:layout_constraintEnd_toStartOf="@+id/opponentPointTextView"
