--- a/app/src/main/res/layout/activity_multiplayer_end_screen.xml
+++ b/app/src/main/res/layout/activity_multiplayer_end_screen.xml
@@ -4,89 +4,121 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ViewModel.multiplayer.MultiplayerEndScreenActivity">
+    tools:context=".ViewModel.multiplayer.MultiplayerEndScreenActivity"
+    android:background="@drawable/set_background">
+
+    <View
+        android:id="@+id/view"
+        android:layout_width="252dp"
+        android:layout_height="78dp"
+        android:background="@drawable/radius"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.496"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.367" />
+
+    <View
+        android:id="@+id/view2"
+        android:layout_width="256dp"
+        android:layout_height="233dp"
+        android:background="@drawable/radius"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.481"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/view"
+        app:layout_constraintVertical_bias="0.546" />
+
+    <Button
+        android:id="@+id/backToMenuBtn2"
+        android:layout_width="170dp"
+        android:layout_height="60dp"
+        android:backgroundTint="@color/blue"
+        android:onClick="backToMenu"
+        android:text="@string/backToMenuBtn"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/newGameBtn2"
+        app:layout_constraintVertical_bias="0.244" />
 
     <Button
         android:id="@+id/newGameBtn2"
-        android:layout_width="160dp"
-        android:layout_height="50dp"
-        android:backgroundTint="@color/dark_blue"
+        android:layout_width="170dp"
+        android:layout_height="60dp"
+        android:backgroundTint="@color/blue"
         android:gravity="center"
         android:onClick="switchToRandomGame"
         android:text="@string/newGameBtn"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.732" />
-
-    <Button
-        android:id="@+id/backToMenuBtn2"
-        android:layout_width="160dp"
-        android:layout_height="50dp"
-        android:backgroundTint="@color/dark_blue"
-        android:onClick="backToMenu"
-        android:text="@string/backToMenuBtn"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.871" />
+        app:layout_constraintTop_toTopOf="@+id/view2"
+        app:layout_constraintVertical_bias="0.141" />
 
     <TextView
         android:id="@+id/scoreForMultiTextView"
-        android:layout_width="220dp"
-        android:layout_height="90dp"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:fontFamily="@font/archivo_black"
         android:gravity="center"
+        android:shadowColor="@color/white"
+        android:shadowDx="8"
+        android:shadowDy="8"
+        android:shadowRadius="2"
         android:text="@string/scoreTextView"
         android:textColor="@color/green"
-        android:textSize="50sp"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:textSize="55sp"
+        app:layout_constraintBottom_toTopOf="@+id/view"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.154" />
+        app:layout_constraintVertical_bias="0.554" />
 
     <TextView
         android:id="@+id/multiTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text=" – "
-        android:textColor="@color/black"
+        android:textColor="@color/blue"
         android:textSize="35sp"
-        app:layout_constraintBottom_toTopOf="@+id/newGameBtn2"
+        app:layout_constraintBottom_toTopOf="@+id/view2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/scoreForMultiTextView"
-        app:layout_constraintVertical_bias="0.325" />
+        app:layout_constraintVertical_bias="0.416" />
 
     <TextView
         android:id="@+id/ownScoreTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="0"
-        android:textColor="@color/black"
+        android:textColor="@color/blue"
         android:textSize="35sp"
-        app:layout_constraintBottom_toTopOf="@+id/newGameBtn2"
+        app:layout_constraintBottom_toTopOf="@+id/view2"
         app:layout_constraintEnd_toStartOf="@+id/multiTextView"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/scoreForMultiTextView"
-        app:layout_constraintVertical_bias="0.325" />
+        app:layout_constraintVertical_bias="0.413" />
 
     <TextView
         android:id="@+id/opponentScoreTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="0"
-        android:textColor="@color/black"
+        android:textColor="@color/blue"
         android:textSize="35sp"
-        app:layout_constraintBottom_toTopOf="@+id/newGameBtn2"
+        app:layout_constraintBottom_toTopOf="@+id/view2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toEndOf="@+id/multiTextView"
         app:layout_constraintTop_toBottomOf="@+id/scoreForMultiTextView"
-        app:layout_constraintVertical_bias="0.325" />
+        app:layout_constraintVertical_bias="0.413" />
 </androidx.constraintlayout.widget.ConstraintLayout>
