--- a/app/src/main/res/layout/activity_singleplayer.xml
+++ b/app/src/main/res/layout/activity_singleplayer.xml
@@ -5,7 +5,28 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_gravity="center"
-    tools:context=".ViewModel.SingleplayerActivity">
+    tools:context=".ViewModel.SingleplayerActivity"
+    android:background="@drawable/set_background">
+
+    <View
+        android:id="@+id/view"
+        android:layout_width="89dp"
+        android:layout_height="59dp"
+        android:layout_marginStart="3dp"
+        android:layout_marginTop="12dp"
+        android:background="@drawable/radius"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <View
+        android:id="@+id/view2"
+        android:layout_width="54dp"
+        android:layout_height="57dp"
+        android:layout_marginTop="12dp"
+        android:layout_marginEnd="4dp"
+        android:background="@drawable/radius"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/opponentPointTextView"
@@ -13,6 +34,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
         android:layout_marginEnd="24dp"
+        android:textColor="@color/blue"
         android:text="@string/pointTextView"
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -24,6 +46,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
         android:layout_marginTop="24dp"
+        android:textColor="@color/blue"
         android:text="@string/timerTextView"
         android:textSize="24sp"
         app:layout_constraintStart_toStartOf="parent"
@@ -51,7 +74,7 @@
                 android:id="@+id/card0"
                 android:layout_width="100dp"
                 android:layout_height="144dp"
-                android:background="@drawable/card_background_empty"
+                android:background="@color/trans"
                 android:contentDescription="@string/contentDescriptionForCards"
                 android:onClick="onCardClick"
                 app:srcCompat="@drawable/gd1"
@@ -61,7 +84,7 @@
                 android:id="@+id/card1"
                 android:layout_width="100dp"
                 android:layout_height="144dp"
-                android:background="@drawable/card_background_empty"
+                android:background="@color/trans"
                 android:contentDescription="@string/contentDescriptionForCards"
                 android:onClick="onCardClick"
                 app:srcCompat="@drawable/gd1"
@@ -71,7 +94,7 @@
                 android:id="@+id/card2"
                 android:layout_width="100dp"
                 android:layout_height="144dp"
-                android:background="@drawable/card_background_empty"
+                android:background="@color/trans"
                 android:contentDescription="@string/contentDescriptionForCards"
                 android:onClick="onCardClick"
                 app:srcCompat="@drawable/gd1"
@@ -90,7 +113,7 @@
                 android:id="@+id/card3"
                 android:layout_width="100dp"
                 android:layout_height="144dp"
-                android:background="@drawable/card_background_empty"
+                android:background="@color/trans"
                 android:contentDescription="@string/contentDescriptionForCards"
                 android:onClick="onCardClick"
                 app:srcCompat="@drawable/gd1"
@@ -100,7 +123,7 @@
                 android:id="@+id/card4"
                 android:layout_width="100dp"
                 android:layout_height="144dp"
-                android:background="@drawable/card_background_empty"
+                android:background="@color/trans"
                 android:contentDescription="@string/contentDescriptionForCards"
                 android:onClick="onCardClick"
                 app:srcCompat="@drawable/gd1"
@@ -110,7 +133,7 @@
                 android:id="@+id/card5"
                 android:layout_width="100dp"
                 android:layout_height="144dp"
-                android:background="@drawable/card_background_empty"
+                android:background="@color/trans"
                 android:contentDescription="@string/contentDescriptionForCards"
                 android:onClick="onCardClick"
                 app:srcCompat="@drawable/gd1"
@@ -129,7 +152,7 @@
                 android:id="@+id/card6"
                 android:layout_width="100dp"
                 android:layout_height="144dp"
-                android:background="@drawable/card_background_empty"
+                android:background="@color/trans"
                 android:contentDescription="@string/contentDescriptionForCards"
                 android:onClick="onCardClick"
                 app:srcCompat="@drawable/gd1"
@@ -139,7 +162,7 @@
                 android:id="@+id/card7"
                 android:layout_width="100dp"
                 android:layout_height="144dp"
-                android:background="@drawable/card_background_empty"
+                android:background="@color/trans"
                 android:contentDescription="@string/contentDescriptionForCards"
                 android:onClick="onCardClick"
                 app:srcCompat="@drawable/gd1"
@@ -149,7 +172,7 @@
                 android:id="@+id/card8"
                 android:layout_width="100dp"
                 android:layout_height="144dp"
-                android:background="@drawable/card_background_empty"
+                android:background="@color/trans"
                 android:contentDescription="@string/contentDescriptionForCards"
                 android:onClick="onCardClick"
                 app:srcCompat="@drawable/gd1"
@@ -168,7 +191,7 @@
                 android:id="@+id/card9"
                 android:layout_width="100dp"
                 android:layout_height="144dp"
-                android:background="@drawable/card_background_empty"
+                android:background="@color/trans"
                 android:contentDescription="@string/contentDescriptionForCards"
                 android:onClick="onCardClick"
                 app:srcCompat="@drawable/gd1"
@@ -178,7 +201,7 @@
                 android:id="@+id/card10"
                 android:layout_width="100dp"
                 android:layout_height="144dp"
-                android:background="@drawable/card_background_empty"
+                android:background="@color/trans"
                 android:contentDescription="@string/contentDescriptionForCards"
                 android:onClick="onCardClick"
                 app:srcCompat="@drawable/gd1"
@@ -188,7 +211,7 @@
                 android:id="@+id/card11"
                 android:layout_width="100dp"
                 android:layout_height="144dp"
-                android:background="@drawable/card_background_empty"
+                android:background="@color/trans"
                 android:contentDescription="@string/contentDescriptionForCards"
                 android:onClick="onCardClick"
                 app:srcCompat="@drawable/gd1"
