--- a/app/src/main/res/layout/activity_waiting_for_game.xml
+++ b/app/src/main/res/layout/activity_waiting_for_game.xml
@@ -4,34 +4,54 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ViewModel.multiplayer.WaitingForGameActivity">
+    tools:context=".ViewModel.multiplayer.WaitingForGameActivity"
+    android:background="@drawable/set_background">
 
     <TextView
         android:id="@+id/waitingTV"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:fontFamily="@font/archivo_black"
         android:gravity="center"
+        android:shadowColor="@color/white"
+        android:shadowDx="8"
+        android:shadowDy="8"
+        android:shadowRadius="2"
         android:text="@string/waitingTV"
-        android:textColor="@color/dark_blue"
-        android:textSize="24sp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:textColor="@color/blue"
+        android:textSize="34sp"
+        app:layout_constraintBottom_toTopOf="@+id/view"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.17" />
+        app:layout_constraintVertical_bias="0.207" />
+
+    <View
+        android:id="@+id/view"
+        android:layout_width="254dp"
+        android:layout_height="97dp"
+        android:background="@drawable/radius"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.496"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.835" />
 
     <Button
         android:id="@+id/stopWaitingBtn"
-        android:layout_width="200dp"
-        android:layout_height="50dp"
-        android:backgroundTint="@color/dark_blue"
+        android:layout_width="190dp"
+        android:layout_height="60dp"
+        android:backgroundTint="@color/blue"
         android:onClick="switchBackToSelectMultiplayerType"
         android:text="@string/stopWaitingBtn"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toBottomOf="@+id/view"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.822" />
+        app:layout_constraintTop_toTopOf="@+id/view"
+        app:layout_constraintVertical_bias="0.513" />
 
     <ProgressBar
         android:id="@+id/progressBar"
@@ -39,11 +59,11 @@
         android:layout_width="90dp"
         android:layout_height="90dp"
         android:indeterminate="true"
-        android:indeterminateTint="@color/dark_blue"
+        android:indeterminateTint="@color/blue"
         android:indeterminateTintMode="src_atop"
-        app:layout_constraintBottom_toTopOf="@+id/stopWaitingBtn"
+        app:layout_constraintBottom_toTopOf="@+id/view"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/waitingTV"
-        app:layout_constraintVertical_bias="0.527" />
+        app:layout_constraintVertical_bias="0.506" />
 </androidx.constraintlayout.widget.ConstraintLayout>
