--- a/app/src/main/res/layout/item_score.xml
+++ b/app/src/main/res/layout/item_score.xml
@@ -5,14 +5,26 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="50dp">
+        android:layout_height="50dp"
+        android:background="@color/light_blue">
+
+        <View
+            android:id="@+id/view"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginLeft="8dp"
+            android:layout_marginTop="3dp"
+            android:layout_marginRight="8dp"
+            android:layout_marginBottom="4dp"
+            android:background="@drawable/radius" />
 
         <TextView
             android:id="@+id/placement"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="8dp"
+            android:layout_marginLeft="16dp"
             android:layout_marginTop="11dp"
+            android:textColor="@color/blue"
             android:text="1."
             android:textSize="18sp" />
 
@@ -22,6 +34,7 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="16dp"
             android:layout_marginTop="11dp"
+            android:textColor="@color/blue"
             android:layout_toRightOf="@+id/placement"
             android:text="Points: 9"
             android:textSize="18sp" />
@@ -32,6 +45,7 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="16dp"
             android:layout_marginTop="11dp"
+            android:textColor="@color/blue"
             android:layout_toRightOf="@+id/pointsView"
             android:text="Time: 0:16"
             android:textSize="18sp" />
@@ -42,6 +56,7 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="16dp"
             android:layout_marginTop="11dp"
+            android:textColor="@color/blue"
             android:layout_toRightOf="@+id/timeView"
             android:text="(My Score)"
             android:textSize="18sp" />
