--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="teal_200">#FF03DAC5</color>
-    <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="dark_blue">#303F9F</color>
+    <color name="light_blue">#48B7EA</color>
     <color name="red">#FF0000</color>
     <color name="dark_red">#C50202</color>
     <color name="green">#008000</color>
@@ -14,4 +13,6 @@
     <color name="light_grey">#DDDCDC</color>
     <color name="yellow">#FFCD51</color>
     <color name="grey">#777773</color>
+    <color name="blue">#115EA1</color>
+    <color name="trans">#00000000</color>
 </resources>
