--- a/app/src/main/res/layout/activity_end_game_screen.xml
+++ b/app/src/main/res/layout/activity_end_game_screen.xml
@@ -113,11 +113,11 @@
         android:backgroundTint="@color/blue"
         android:onClick="goToScoreBoard"
         android:text="@string/scoreboardText"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toBottomOf="@+id/view2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/backToMenuBtn"
-        app:layout_constraintVertical_bias="0.3" />
+        app:layout_constraintVertical_bias="0.515" />
 
     <Button
         android:id="@+id/backToMenuBtn"
