--- a/app/src/main/res/layout/activity_multiplayer_end_screen.xml
+++ b/app/src/main/res/layout/activity_multiplayer_end_screen.xml
@@ -38,12 +38,11 @@
         android:backgroundTint="@color/blue"
         android:onClick="backToMenu"
         android:text="@string/backToMenuBtn"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toBottomOf="@+id/view2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/newGameBtn2"
-        app:layout_constraintVertical_bias="0.244" />
+        app:layout_constraintTop_toBottomOf="@+id/newGameBtn2" />
 
     <Button
         android:id="@+id/newGameBtn2"
