added hu language pack

--- a/app/src/main/res/layout/activity_difficulty.xml
+++ b/app/src/main/res/layout/activity_difficulty.xml
@@ -45,7 +45,7 @@
         android:backgroundTint="@color/blue"
         android:gravity="center"
         android:onClick="switchToSingleplayer"
-        android:text="@string/easyBtn"
+        android:text="@string/easy"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
@@ -60,7 +60,7 @@
         android:backgroundTint="@color/blue"
         android:gravity="center"
         android:onClick="switchToSingleplayer"
-        android:text="@string/normalBtn"
+        android:text="@string/normal"
         app:layout_constraintBottom_toBottomOf="@+id/view"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
